--- a/contents/ja/documents/steam.html
+++ b/contents/ja/documents/steam.html
@@ -27,14 +27,13 @@ func init() {
 <p>なおこのバインディングはまだ API をほとんど実装していません。今後対応予定です。</p>
 <h2>Windows</h2>
 <p>Windows は最も簡単で、普通に Go でビルドするだけです。 Ebitengine は Windows においては Pure Go なので、 <code>GOOS</code> と <code>GOARCH</code> を指定すればどこでもビルドできます。</p>
-<p>Go アプリケーションを Windows Steam 環境で動かすときに、フリーズすることがある問題が報告されています (<a href="https://github.com/hajimehoshi/ebiten/issues/3181">#3181</a>、 <a href="https://github.com/golang/go/issues/71242">golang/go#71242</a>)。ワークアラウンドとして、 <code>go build</code> を実行する際に <code>-ldflags="-X=runtime.godebugDefault=asyncpreemptoff=1"</code> を指定してください。</p>
+<p>Go アプリケーションを Windows Steam 環境で動かすときに、フリーズすることがある問題が報告されています (<a href="https://github.com/hajimehoshi/ebiten/issues/3181">#3181</a>、 <a href="https://github.com/golang/go/issues/71242">golang/go#71242</a>)。ワークアラウンドとして、 <code>go build</code> を実行する際に <code>-ldflags="-X=runtime.godebugDefault=asyncpreemptoff=1"</code> を指定してください。なお、下記の手順では更に <code>-H=windowsgui</code> を追加して、最初にコンソールが開かないようにしています。</p>
 <p>PowerShell でビルドする場合は次のようになります。</p>
 <pre><code>$Env:GOARCH = 'amd64'
-go build -o yourgame_windows_amd64.exe -ldflags="-X=runtime.godebugDefault=asyncpreemptoff=1" .
+go build -o yourgame_windows_amd64.exe -ldflags="-X=runtime.godebugDefault=asyncpreemptoff=1 -H=windowsgui" .
 Remove-Item Env:GOARCH</code></pre>
 <p>POSIX シェルでビルドする場合は次のようになります。</p>
-<pre><code>env GOOS=windows GOARCH=amd64 go build -o yourgame_windows_amd64.exe -ldflags="-X=runtime.godebugDefault=asyncpreemptoff=1" .</code></pre>
-<p>Windows 向け GUI アプリをビルドする際には <code>-ldflags=-H=windowsgui</code> をつけると、最初のコンソールの表示がなくなります。 Ebitengine の場合はコンソールを自動で閉じるので、つけなくても問題はありませんが、つけたほうがユーザー体験は良いでしょう。</p>
+<pre><code>env GOOS=windows GOARCH=amd64 go build -o yourgame_windows_amd64.exe -ldflags="-X=runtime.godebugDefault=asyncpreemptoff=1 -H=windowsgui" .</code></pre>
 <p>アイコンは必須ではありません。気になる方はリソースを埋め込むツールを適宜使ってください。ゲーム実行中に <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowIcon"><code>ebiten.SetWindowIcon</code></a> を呼ぶことで、タスクバーに表示されるアイコンを変更することはできます。</p>
 <p>こうして出来上がった <code>exe</code> ファイルを zip で固めて、 Steamworks にビルドとしてアップロードしてください。</p>
 <h2>macOS</h2>
