contents/en/documents/steam: update

--- a/contents/en/documents/steam.html
+++ b/contents/en/documents/steam.html
@@ -89,7 +89,7 @@ echo '&lt;?xml version="1.0" encoding="UTF-8"?&gt;
   <p class="img"><img src="/images/documents/steam/developer_id_application.png" alt="Developer ID Application"></p>
 </figure>
 <p>Next, create an App-Specific Password. This can be easily created from the <a href="https://appleid.apple.com/">Apple ID website</a>. For details, please refer to <a href="https://support.apple.com/en-us/HT204397">Apple’s support page</a>.</p>
-<p>Now, notarize the app. We have created a library called <a href="https://github.com/hajimehoshi/notarize"><code>notarize</code></a> that handles the steps up to stapler for notarization. Please refer to it. Below is an example of its usage.</p>
+<p>Now, notarize the app. We have created a library called <a href="https://github.com/hajimehoshi/notarize"><code>notarize</code></a> that handles the steps up to stapler for notarization. Below is an example of its usage.</p>
 <pre><code>package main
 
 import (
