--- a/contents/ja/documents/steam.html
+++ b/contents/ja/documents/steam.html
@@ -89,7 +89,7 @@ echo '&lt;?xml version="1.0" encoding="UTF-8"?&gt;
   <p class="img"><img src="/images/documents/steam/developer_id_application.png"></p>
 </figure>
 <p>次に App-Specific Password を作ります。 <a href="https://appleid.apple.com/">Apple ID のサイト</a>から簡単に作れます。詳しくは <a href="https://support.apple.com/en-us/HT204397">Apple のヘルプページ</a>を参考にしてください。</p>
-<p>次に公証を受けます。 stapler までの公証の手順を行うライブラリ <a href="https://github.com/hajimehoshi/notarize"><code>notarize</code></a> を作成いたしました。ご参照ください。以下が使用例です。</p>
+<p>次に公証を受けます。 stapler までの公証の手順を行うライブラリ <a href="https://github.com/hajimehoshi/notarize"><code>notarize</code></a> を作成いたしました。以下が使用例です。</p>
 <pre><code>package main
 
 import (
