contents/en/documents/2.8: v2.8.7 released

--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -139,5 +139,11 @@
 <h3>Bug Fixes</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/141?closed=1">Issues for v2.8.6</a></p>
 <ul>
-  <li>Fix an issue where a race condition during seeking in an audio player could cause noise (<a href="https://github.com/hajimehoshi/ebiten/issues/3173">#3173</a>)</li>
+  <li>Fix an issue where a race condition during seeking in an audio player could cause noise (<a href="https://github.com/hajimehoshi/ebiten/issues/3173">#3173</a>).</li>
+</ul>
+<h2>v2.8.7</h2>
+<h3>Buf Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/142?closed=1">Issues for v2.8.7</a></p>
+<ul>
+  <li>Fixed an issue where calling <code>SetBufferSize</code> immediately after <code>audio.Player</code>’s <code>Play</code> could cause a crash (<a href="https://github.com/hajimehoshi/ebiten/issues/3214">#3214</a>).</li>
 </ul>
