--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -139,5 +139,11 @@
 <h3>バグ修正</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/141?closed=1">Issues for v2.8.6</a></p>
 <ul>
-  <li>オーディオプレーヤーのシーク時にレースコンディションが発生し、ノイズが発生することがある問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3173">#3173</a>)</li>
+  <li>オーディオプレーヤーのシーク時にレースコンディションが発生し、ノイズが発生することがある問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3173">#3173</a>)。</li>
+</ul>
+<h2>v2.8.7</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/142?closed=1">Issues for v2.8.7</a></p>
+<ul>
+  <li><code>audio.Player</code> の <code>Play</code> 直後に <code>SetBufferSize</code> を呼ぶとクラッシュすることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3214">#3214</a>)。</li>
 </ul>
