contents/en/documents/2.8: v2.8.8 released

--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -147,3 +147,9 @@
 <ul>
   <li>Fixed an issue where calling <code>SetBufferSize</code> immediately after <code>audio.Player</code>’s <code>Play</code> could cause a crash (<a href="https://github.com/hajimehoshi/ebiten/issues/3214">#3214</a>).</li>
 </ul>
+<h2>v2.8.8</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/144?closed=1">Issues for v2.8.8</a></p>
+<ul>
+  <li>Fixed an issue where rendering text with <code>text/v2</code> could significantly degrade performance (<a href="https://github.com/hajimehoshi/ebiten/issues/3228">#3228</a>).</li>
+</ul>
