--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -147,3 +147,9 @@
 <ul>
   <li><code>audio.Player</code> の <code>Play</code> 直後に <code>SetBufferSize</code> を呼ぶとクラッシュすることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3214">#3214</a>)。</li>
 </ul>
+<h2>v2.8.8</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/144?closed=1">Issues for v2.8.8</a></p>
+<ul>
+  <li><code>text/v2</code> での文字描画時に著しくパフォーマンスが落ちることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3228">#3228</a>)。</li>
+</ul>
