--- a/contents/en/documents/install.html
+++ b/contents/en/documents/install.html
@@ -52,7 +52,7 @@
     <h3>Alpine</h3>
     <pre><code>sudo apk add alsa-lib-dev libx11-dev libxrandr-dev libxcursor-dev libxinerama-dev libxi-dev mesa-dev pkgconf</code></pre>
     <h3>Void</h3>
-    <pre><code>sudo xbps-install libXcursor-devel libXi-devel libXrandr-devel libXxf86vm-devel MesaLib-devel pkg-config</code></pre>
+    <pre><code>sudo xbps-install libXcursor-devel libXi-devel libXrandr-devel libXxf86vm-devel MesaLib-devel pkg-config libXinerama-devel</code></pre>
   </div>
   <div data-tags="freebsd">
     <pre><code>pkg install alsa-lib libxcursor libxi libxinerama libxrandr mesa-libs pkgconf</code></pre>
