contents/en/showcase: add Coral and the Abyss

--- a/contents/en/showcase.html
+++ b/contents/en/showcase.html
@@ -1,4 +1,9 @@
 <h1>Showcase</h1>
+<h2>Coral &amp; The Abyss</h2>
+<figure>
+  <p class="img"><a href="https://www.intrugligames.com/coral-and-the-abyss.html"><img src="/images/showcase/coralandtheabyss.png" width="744"></a></p>
+  <figcaption>Copyright <a href="https://www.intrugligames.com/">Intrugli Games</a></figcaption>
+</figure>
 <h2>Snowman Story</h2>
 <figure>
   <p class="img"><a href="https://odencat.com/snowman/en.html"><img src="/images/showcase/snowmanstory_en.png" width="744"></a></p>
