--- a/contents/ja/showcase.html
+++ b/contents/ja/showcase.html
@@ -1,4 +1,9 @@
 <h1>ショーケース</h1>
+<h2>Coral &amp; The Abyss</h2>
+<figure>
+  <p class="img"><a href="https://www.intrugligames.com/coral-and-the-abyss.html"><img src="/images/showcase/coralandtheabyss.png" width="744"></a></p>
+  <figcaption>Copyright <a href="https://www.intrugligames.com/">Intrugli Games</a></figcaption>
+</figure>
 <h2>スノーマン・ストーリー</h2>
 <figure>
   <p class="img"><a href="https://odencat.com/snowman/ja.html"><img src="/images/showcase/snowmanstory_ja.png" width="744"></a></p>
