contents/en/showcase: add From Madness with Love

--- a/contents/en/showcase.html
+++ b/contents/en/showcase.html
@@ -1,4 +1,9 @@
 <h1>Showcase</h1>
+<h2>From Madness with Love</h2>
+<figure>
+  <p class="img"><a href="https://playism.com/en/game/frommadness-withlove/"><img src="/images/showcase/frommadnesswithlove_en.jpg" width="744"></a></p>
+  <figcaption>Copyright <a href="https://rokettojam123.wixsite.com/jamsanppoid">Jamsanppoid</a></figcaption>
+</figure>
 <h2>Coral &amp; The Abyss</h2>
 <figure>
   <p class="img"><a href="https://www.intrugligames.com/coral-and-the-abyss.html"><img src="/images/showcase/coralandtheabyss.png" width="744"></a></p>
