--- a/contents/ja/showcase.html
+++ b/contents/ja/showcase.html
@@ -1,4 +1,9 @@
 <h1>ショーケース</h1>
+<h2>狂気より愛をこめて</h2>
+<figure>
+  <p class="img"><a href="https://playism.com/game/frommadness-withlove/"><img src="/images/showcase/frommadnesswithlove_ja.png" width="744"></a></p>
+  <figcaption>Copyright <a href="https://rokettojam123.wixsite.com/jamsanppoid">じゃむさんっぽいど</a></figcaption>
+</figure>
 <h2>Coral &amp; The Abyss</h2>
 <figure>
   <p class="img"><a href="https://www.intrugligames.com/coral-and-the-abyss.html"><img src="/images/showcase/coralandtheabyss.png" width="744"></a></p>
