--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -53,7 +53,7 @@
   </div>
   <div class="grid-item-2">
     <h3>商用レベルのゲーム</h3>
-    <p class="img"><img src="/images/productionready.png" width="448" height="224" alt="Production Ready"></p>
+    <p class="img"><a href="/ja/showcase.html"><img src="/images/productionready.png" width="448" height="224" alt="Production Ready"></a></p>
     <p>Ebitengine は商用レベルのゲームを作ることができます。<a href="https://daigostudio.com/bearsrestaurant/">くまのレストラン</a>は、 150 万ダウンロードを達成した Ebitengine 製のモバイルゲームです。その他の Ebitengine 製商用ゲームについては<a href="/ja/showcase.html">ショーケース</a>のページをご覧ください。</p>
   </div>
 </div>
