contents/index: update an image

--- a/contents/index.html
+++ b/contents/index.html
@@ -53,7 +53,7 @@
   </div>
   <div class="grid-item-2">
     <h3>Production-Ready</h3>
-    <p class="img"><a href="/en/showcase.html"><img src="/images/productionready.png" width="448" height="224" alt="Production Ready"></a></p>
+    <p class="img"><a href="/en/showcase.html"><img src="/images/productionready2.png" width="448" height="224" alt="Production Ready"></a></p>
     <p>Ebitengine has been used to develop production-level games. One such example is <a href="https://odencat.com/fishingparadiso/en.html">Fishing Paradiso</a>, a mobile application that has been downloaded over 2,000,000 times. See the showcase page for more production games made with Ebitengine. For information on other commercial games by Ebitengine, please visit <a href="/en/showcase.html">the showcase page</a>.</p>
   </div>
 </div>
