contents/en/documents/shader: update (column major)

--- a/contents/ja/documents/shader.html
+++ b/contents/ja/documents/shader.html
@@ -98,7 +98,7 @@
 <p><code>float</code> は浮動小数点型です。 Go の <code>float32</code> や <code>float64</code> とは異なり精度の保証がありません。</p>
 <p><code>vec2</code>、 <code>vec3</code>、 <code>vec4</code> はベクターと呼ばれ、それぞれ 2、 3、 4 つの値の組を表す型です。各要素は <code>float</code> です。 Swizzling と呼ばれる操作を行えます。</p>
 <p><code>ivec2</code>、 <code>ivec3</code>、 <code>ivec4</code> も同様にベクターであり、各要素は <code>int</code> です。</p>
-<p><code>mat2</code>、 <code>mat3</code>、 <code>mat4</code> はそれぞれ 2、 3、 4 次の正方行列を表す型です。各要素は <code>float</code> です。</p>
+<p><code>mat2</code>、 <code>mat3</code>、 <code>mat4</code> はそれぞれ 2、 3、 4 次の正方行列を表す型です。各要素は <code>float</code> です。 GLSL などと同じく Column-major です。</p>
 <p>Kage は他に配列型をサポートします。構造体はまだサポートされていません。</p>
 <h3>組み込み型の初期化関数</h3>
 <p>Go と似ていますが、型名を関数のように使うことでその型の値を得ることが出来ます。ベクター型と行列型だけ特殊で、引数を柔軟に取りえます。</p>
