tmpl: update a link to the Chinese version

--- a/tmpl.html
+++ b/tmpl.html
@@ -33,7 +33,7 @@
         {{ if .SameLang }}<li class="active">{{.Title}}</li>{{ else }}<li><a href="{{.RelURL}}" hreflang="{{.Lang}}">{{.Title}}</a></li>{{ end }}
       {{ end }}</ul>
       <ul>
-        <li><a href="https://ebiten-zh.vercel.app/">中文</a></li>
+        <li><a href="https://ebitengine-zh.pages.dev/">中文</a></li>
       </ul>
       <ul>
         {{ if eq .Lang "en" }}<li><a href="{{ .Top }}">Home</a></li>
