--- a/contents/ja/documents/install.html
+++ b/contents/ja/documents/install.html
@@ -44,7 +44,7 @@
     <h3>Debian / Ubuntu</h3>
     <pre><code>sudo apt install libc6-dev libgl1-mesa-dev libgl1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev libasound2-dev pkg-config</code></pre>
     <h3>Fedora</h3>
-    <pre><code>sudo dnf install mesa-libGL-devel mesa-libGLES-devel libXrandr-devel libXcursor-devel libXinerama-devel libXi-devel libXxf86vm-devel alsa-lib-devel pkg-config</code></pre>
+    <pre><code>sudo dnf install libglvnd-devel libXrandr-devel libXcursor-devel libXinerama-devel libXi-devel libXxf86vm-devel alsa-lib-devel pkg-config</code></pre>
     <h3>Solus</h3>
     <pre><code>sudo eopkg install libglvnd-devel libx11-devel libxrandr-devel libxinerama-devel libxcursor-devel libxi-devel libxxf86vm-devel alsa-lib-devel pkg-config</code></pre>
     <h3>Arch</h3>
