change link of Japanese "fill" tour page

--- a/contents/ja/tour/index.html
+++ b/contents/ja/tour/index.html
@@ -5,7 +5,7 @@
 </ul>
 <h2>グラフィック</h3>
 <ul>
-  <li><a href="/en/tour/fill.html">Fill</a></li>
+  <li><a href="/ja/tour/fill.html">Fill</a></li>
   <li><a href="/en/tour/image.html">Render an Image</a></li>
   <li><a href="/en/tour/geom.html">Geometry Matrix</a></li>
   <li><a href="#">Filter (TBD)</a></li>
