contents/en/documents/2.8: v2.8.9 released

--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -153,3 +153,9 @@
 <ul>
   <li><code>text/v2</code> での文字描画時に著しくパフォーマンスが落ちることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3228">#3228</a>)。</li>
 </ul>
+<h2>v2.8.9</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/145?closed=1">Issues for v2.8.9</a></p>
+<ul>
+  <li><code>cmd/ebitenmobile</code> が Go 1.25 でコンパイルできなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3323">#3323</a>)。</li>
+</ul>
