--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -153,3 +153,9 @@
 <ul>
   <li>Fixed an issue where rendering text with <code>text/v2</code> could significantly degrade performance (<a href="https://github.com/hajimehoshi/ebiten/issues/3228">#3228</a>).</li>
 </ul>
+<h2>v2.8.9</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/145?closed=1">Issues for v2.8.9</a></p>
+<ul>
+  <li>Fixed an issue where <code>cmd/ebitenmobile</code> could not be compiled with Go 1.25 (<a href="https://github.com/hajimehoshi/ebiten/issues/3323">#3323</a>).</li>
+</ul>
