contents/en/documents: add 2.9.html

--- a/contents/ja/documents/nav.html
+++ b/contents/ja/documents/nav.html
@@ -16,6 +16,7 @@
 </ul>
 <h3>リリースノート</h3>
 <ul>
+  <li><a href="./2.9.html">2.9</a></li>
   <li><a href="./2.8.html">2.8</a></li>
   <li><a href="./2.7.html">2.7</a></li>
   <li><a href="./2.6.html">2.6</a></li>
