contents/en/documents/shader: add frontfacing

--- a/contents/en/documents/shader.html
+++ b/contents/en/documents/shader.html
@@ -179,6 +179,7 @@ v2.xyz = v2.xxx        // Get vec3(1, 1, 1), and set it to all the components to
   <tr><th><code>dfdx(p T) T</code></th><td>(Note that this function's results depend on internal states and are indeterministic)</td></tr>
   <tr><th><code>dfdy(p T) T</code></th><td>(Note that this function's results depend on internal states and are indeterministic)</td></tr>
   <tr><th><code>fwidth(p T) T</code></th><td>(Note that this function's results depend on internal states and are indeterministic)</td></tr>
+  <tr><th><code>frontfacing() bool</code></th><td>Returns whether the current fragment is front-facing or not. (v2.9.0)</td></tr>
 </table>
 <h3>Built-in functions (images)</h3>
 <table>
