--- a/contents/ja/documents/shader.html
+++ b/contents/ja/documents/shader.html
@@ -179,6 +179,7 @@ v2.xyz = v2.xxx        // Get vec3(1, 1, 1), and set it to all the components to
   <tr><th><code>dfdx(p T) T</code></th><td>(注意: この関数の結果は内部の状態に依存し、非決定的です。)</td></tr>
   <tr><th><code>dfdy(p T) T</code></th><td>(注意: この関数の結果は内部の状態に依存し、非決定的です。)</td></tr>
   <tr><th><code>fwidth(p T) T</code></th><td>(注意: この関数の結果は内部の状態に依存し、非決定的です。)</td></tr>
+  <tr><th><code>frontfacing() bool</code></th><td>現在のピクセルが前面にあるならば <code>true</code> を、そうでなければ <code>false</code> を返す。 (v2.9.0)</td></tr>
 </table>
 <h3>組み込み関数 (画像)</h3>
 <table>
