contents/en/documents/2.9: add FillRule and fix typo

--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -1,7 +1,7 @@
 <h1>Ebitengine 2.9 Release Notes</h1>
 <p><em>These release notes are a draft. v2.9.0 has not been released yet.</em></p>
 <h2>v2.9.0</h2>
-<p><a href="https://github.com/hajimehoshi/ebiten/milestone/124?closed=1">Issues for v2.8.0</a></p>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/124?closed=1">Issues for v2.9.0</a></p>
 <p>This release mainly adds minor features, bug fixes, and performance improvements.</p>
 <p>Starting from Ebitengine 2.9, Go 1.24 or later is required.</p>
 <h3>Improved Rendering Quality for Vector Graphics</h3>
@@ -38,6 +38,9 @@
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/colorm#DrawImageOptions.ColorScale"><code>colorm.DrawImageOptions.ColorScale</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3188">#3188</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#DrawPathOptions"><code>vector.DrawPathOptions</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3287">#3287</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#FillOptions"><code>vector.FillOptions</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3287">#3287</a>)</li>
+  <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#FillRule"><code>vector.FillRule</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3150">#3150</a>)</li>
+  <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#FillRuleNonZero"><code>vector.FillRuleNonZero</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3150">#3150</a>)</li>
+  <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#FillRuleEvenOdd"><code>vector.FillRuleEvenOdd</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3150">#3150</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#FillCircle"><code>vector.FillCircle()</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3150">#3150</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#FillPath"><code>vector.FillPath()</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3153">#3153</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/3278">#3278</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#FillRect"><code>vector.FillRect()</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/3150">#3150</a>)</li>
