--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -15,15 +15,8 @@
 <p>The new approach uses a special shader to create a custom stencil buffer, which is then used to fill with colors. This increases the number of samples per pixel while consuming the same or fewer textures, improving rendering quality. Additionally, instead of drawing multiple overlapping triangles, the finished stencil buffer is filled at once, allowing correct rendering of semi-transparent colors and proper handling of the <code>Blend</code> option. The implementation was inspired by Evan Wallace’s blog post, <a href="https://medium.com/@evanwallace/easy-scalable-text-rendering-on-the-gpu-c3f4d782c5ac">“Easy Scalable Text Rendering on the GPU”</a>.</p>
 <p>The functions added for the new rendering method are mainly <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#FillPath"><code>vector.FillPath()</code></a> and <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#StrokePath"><code>vector.StrokePath()</code></a>. To use the new rendering method, calls to the old <code>AppendVerticesAndIndicesFor…</code> functions need to be replaced with the new ones. The rendering results of the existing <code>AppendVerticesAndIndicesFor…</code> functions remain unchanged. These functions are now deprecated. The deprecated functions will continue to work as long as Ebitengine remains in the same major version, but they may be removed in future major versions.</p>
 <figure>
-  <div class="grid-container">
-    <div class="grid-item-2">
-      <p class="img"><a href="/images/documents/2.9/before.png"><img src="/images/documents/2.9/before.png" width="360" ></a></p>
-    </div>
-    <div class="grid-item-2">
-      <p class="img"><a href="/images/documents/2.9/after.png"><img src="/images/documents/2.9/after.png" width="360" ></a></p>
-    </div>
-  </div>
-  <figcaption>Comparison between the previous vector graphics rendering and the new vector graphics rendering</figcaption>
+  <p class="img"><img src="/images/documents/2.9/vector.png" width="744" ></p>
+  <figcaption>Comparison between the old and new vector graphics rendering methods</figcaption>
 </figure>
 <h3>New APIs</h3>
 <ul>
